--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>DeautherX Web Tools</title>
+  <title>Fuxionlab Web Tools</title>
   <meta
   name="description"
-  content="Easily allow users to install DeautherX firmware on the web."
+  content="Easily allow users to install Custom firmware on the web."
   />
   <meta name="viewport" content="width=device-width" />
   <meta name="color-scheme" content="dark light" />
@@ -178,22 +178,18 @@ img{
   <table align="center">
     <tr>
       <td>
-        <label>Choose display type:</label>
+        <label>Choose Firmware type:</label>
       </td>
     </tr>
 
       <td>
         <div class="device-form">
           <dev>
-          <input type="radio" name="type" value="13" /> 1.3 inch OLED Display
+          <input type="radio" name="type" value="13" /> Juanfi System
         </dev>
         <dev>
-          <input type="radio" name="type" value="096" /> 0.96 inch OLED Display
+          <input type="radio" name="type" value="096" /> Wifi5Soft 
         </dev>
-
-        <dev>
-            <input type="radio" name="type" value="none" /> none
-          </dev>
       </div>
       </td>
     </tr>
