--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ img{
 <header>
 
 </header>
-  <h1 class="logo">DeautherX web Tools<br> </h1>
+  <h1 class="logo">Fuxionlab web Tools<br> </h1>
 
 
   <table align="center">
