--- a/index.html
+++ b/index.html
@@ -204,11 +204,11 @@ img{
     <p class="button-row" align="center" >
     <esp-web-install-button class="invisible"></esp-web-install-button></p>
 </h4>
-  <h5>How To Flash DeautherX Firmware to ESP8266-based Board</h5>
+  <h5>How To Flash Firmware to Fuxionlab Custom Board</h5>
 
   <ul>
     <li>Select display type</li>
-    <li>Connect your ESP8266 board via USB</li>
+    <li>Connect your Custom board via USB</li>
     <li>Click "Connect" and choose the serial port of your ESP</li>
     <li>On Device Dashboard, click "Install"</li>
   </ul>
@@ -217,8 +217,8 @@ img{
 
   <ul>
     <li>Select display type (It is not important to select the correct display type; it is just necessary for the program to run)</li>
-    <li>Connect your ESP8266 board via USB</li>
-    <li>Click "Connect" and choose the serial port of your ESP</li>
+    <li>Connect your Custom board via USB</li>
+    <li>Click "Connect" and choose the serial port of your Board</li>
     <li>On Device Dashboard, click "Logs and Console"</li>
   </ul>
     <script type="module" src="https://unpkg.com/esp-web-tools@9.1.1/dist/web/install-button.js?module"></script>
@@ -235,7 +235,7 @@ img{
   </script>
 
     <footer>
-    <p>Visit the DeautherX GitHub repository to learn more: <a href="https://github.com/BlackTechX011/DeautherX_Web_Tools/" target="_blank">DeautherX</a></p>
+    <p>Visit the Fuxionlab GitHub repository to learn more: <a href="https://github.com/BlackTechX011/DeautherX_Web_Tools/" target="_blank">DeautherX</a></p>
   </footer>
   </body>
 
