--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
       <p>Select your Firmware</p>
       <ul class="radios">
         <li>
-          <label><input type="radio" name="type" value="i2s" />WIFI5Soft 4.1</label>
+          <label><input type="radio" name="type" value="W5" />WIFI5Soft 4.1</label>
         </li>
         <li>
-          <label><input type="radio" name="type" value="muse" /> Juanfi 4.3</label>
+          <label><input type="radio" name="type" value="1FI" /> Juanfi 4.3</label>
         </li>
       </ul>
       <p class="button-row" align="center">
